--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                         My Auris dành điều tốt nhất cho bạn
                     </div>
                     <div class="row">
-                        <div class="col-lg-4 news-item">
+                        <div class="col-lg-4 col-md-6 news-item">
                             <div class="news-item-inner">
                                 <a href="#">
                                     <img class="lozad" data-src="assets/img/card.jpg" alt="My Auris">
@@ -331,7 +331,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 news-item">
+                        <div class="col-lg-4 col-md-6 news-item">
                             <div class="news-item-inner">
                                 <a href="#">
                                     <img class="lozad" data-src="assets/img/card.jpg" alt="My Auris">
@@ -360,7 +360,7 @@
                         Dịch vụ
                     </div>
                     <div class="row">
-                        <div class="col-lg-3 col-md-6 col-12 service-item">
+                        <div class="col-xl-3 col-md-6 col-12 service-item">
                             <div class="inner">
                                 <a href="#">
                                     <img class="lozad" data-src="assets/img/2.png" alt="My Auris">
@@ -372,7 +372,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-12 service-item">
+                        <div class="col-xl-3 col-md-6 col-12 service-item">
                             <div class="inner">
                                 <a href="#">
                                     <img class="lozad" data-src="assets/img/4.png" alt="My Auris">
@@ -384,7 +384,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-12 service-item">
+                        <div class="col-xl-3 col-md-6 col-12 service-item">
                             <div class="inner">
                                 <a href="#">
                                     <img class="lozad" data-src="assets/img/1.png" alt="My Auris">
@@ -396,7 +396,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-12 service-item">
+                        <div class="col-xl-3 col-md-6 col-12 service-item">
                             <div class="inner">
                                 <a href="#">
                                     <img class="lozad" data-src="assets/img/3.png" alt="My Auris">
@@ -596,7 +596,7 @@
                 <div class="bg-overlay"></div>
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4 progress-item">
+                        <div class="col-md-4 col-12 progress-item">
                             <div class="inner">
                                 <canvas height="150" width="150" id="counter"></canvas>
                                 <div class="circle1"></div>
@@ -606,7 +606,7 @@
                             <div class="h4">Thái độ</div>
                         </div>
 
-                        <div class="col-lg-4 progress-item">
+                        <div class="col-md-4 col-12 progress-item">
                             <div class="inner">
                                 <canvas height="150" width="150" id="counter1"></canvas>
                                 <div class="circle1"></div>
@@ -616,7 +616,7 @@
                             <div class="h4">Chuyên môn</div>
                         </div>
 
-                        <div class="col-lg-4 progress-item">
+                        <div class="col-md-4 col-12 progress-item">
                             <div class="inner">
                                 <canvas height="150" width="150" id="counter2"></canvas>
                                 <div class="circle1"></div>
@@ -722,7 +722,7 @@
             <div class="footer-top">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-5 col-left">
+                        <div class="col-xl-5 col-lg-6 col-left">
                             <div class="box-video">
                                 <div class="video">
                                     <div class="embed-responsive embed-responsive-4by3">
@@ -732,9 +732,9 @@
                                 <p>Cám ơn bạn đã sử dụng dịch vụ của chúng tôi</p>
                             </div>
                         </div>
-                        <div class="col-lg-7 col-right">
+                        <div class="col-xl-7 col-lg-6 col-right">
                             <div class="row h-100">
-                                <div class="col-lg-7 box-info">
+                                <div class="col-xl-7 box-info">
                                     <div class="info d-flex flex-column justify-content-around">
                                         <img class="lozad" data-src="assets/img/logo-footer.png" alt="My Auris">
                                         <ul>
@@ -746,8 +746,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="col-lg-5 image p-lg-0">
-                                    <img class="lozad" data-src="assets/img/dr.jpg" alt="My Auris">
+                                <div class="col-xl-5 image d-none d-xl-block p-0">
+                                    <img class="lozad" data-src="assets/img/dr1.jpg" alt="My Auris">
                                 </div>
                             </div>
                         </div>
