--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                             <div class="box-video">
                                 <div class="video">
                                     <div class="embed-responsive embed-responsive-4by3">
-                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/OHLU3cVuQ9A?rel=0&showinfo=0" allowfullscreen></iframe>
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/g6AHFrA1XBc?rel=0&showinfo=0" allowfullscreen></iframe>
                                     </div>
                                 </div>
                                 <p>Cám ơn bạn đã sử dụng dịch vụ của chúng tôi</p>
@@ -815,7 +815,7 @@
                         <div class="col-lg-8 footer-menu">
                             <div class="footer-nav">
                                 <div class="row">
-                                    <div class="col-lg-4">
+                                    <div class="col-md-4">
                                         <div class="h5 title">Dịch vụ</div>
                                         <ul>
                                             <li><a href="#">Thẩm mỹ</a></li>
@@ -824,14 +824,19 @@
                                             <li><a href="#">Phục hồi</a></li>
                                         </ul>
                                     </div>
-                                    <div class="col-lg-4">
-                                        <div class="h5 title">Công nghệ &amp; Bệnh lý</div>
+                                    <div class="col-md-4">
+                                        <div class="h5 title">Công nghệ &am</div>
                                         <ul>
                                             <li><a href="#">Làm răng sứ</a></li>
                                             <li><a href="#">Bọc răng sứ</a></li>
                                             <li><a href="#">Phủ răng sứ</a></li>
                                             <li><a href="#">Dán răng sứ</a></li>
                                             <li><a href="#">Niềng răng</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="h5 title">Bệnh lý</div>
+                                        <ul>
                                             <li><a href="#">Răng hô</a></li>
                                             <li><a href="#">Răng móm</a></li>
                                             <li><a href="#">Răng thưa</a></li>
@@ -839,15 +844,6 @@
                                             <li><a href="#">Răng khấp khểnh</a></li>
                                             <li><a href="#">Mất răng</a></li>
                                             <li><a href="#">Viêm nướu (lợi)</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="h5 title">Các từ khóa phổ biến</div>
-                                        <ul>
-                                            <li><a href="#">Menu #1</a></li>
-                                            <li><a href="#">Menu #2</a></li>
-                                            <li><a href="#">Menu #3</a></li>
-                                            <li><a href="#">Menu #4</a></li>
                                         </ul>
                                     </div>
                                 </div>
