--- a/index.html
+++ b/index.html
@@ -226,25 +226,74 @@
                                     <li class="active"><a href="/">Trang chủ</a></li>
                                     <li><a href="#">Giới thiệu</a></li>
                                     <li class="has-children">
-                                        <a href="#">Dịch vụ <i class="fas fa-angle-down"></i></a>
+                                        <a href="#">Dịch vụ <i class="fas fa-caret-down"></i></a>
+                                        <div class="mega-menu clearfix">
+                                            <div class="container">
+                                                <div class="row">
+                                                    <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
+                                                        <li class="title">Thẩm mỹ</li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dòng sứ phổ thông</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dòng sứ cao cấp</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Phủ răng sứ</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dán sứ - Phủ màn sứ</a></li>
+                                                    </ul>
+                                                    <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
+                                                        <li class="title">Điều trị</li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Cạo vôi răng</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Trám răng</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Điều trị tủy</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Nhổ răng</a></li>
+                                                    </ul>
+                                                    <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
+                                                        <li class="title">Cải thiện</li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng mắc cài</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng vô hình Invisalign</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng vô hình iMay</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Nhấn lợi giảm hô</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Nhấn lợi tạo đường cười</a></li>
+                                                    </ul>
+                                                    <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
+                                                        <li class="title">Phục hồi</li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Cầu răng sứ</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Trồng răng Implant</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="has-children">
+                                        <a href="#">Khách hàng <i class="fas fa-caret-down"></i></a>
                                         <ul class="sub-menu">
-                                            <li><a href="#">Danh mục</a></li>
-                                            <li><a href="#">Chi tiết</a></li>
+                                            <li><a href="#"><i class="fas fa-angle-right"></i>Người nổi tiếng</a></li>
+                                            <li><a href="#"><i class="fas fa-angle-right"></i>Khách hàng</a></li>
                                         </ul>
                                     </li>
                                     <li class="has-children">
-                                        <a href="#">Khách hàng <i class="fas fa-angle-down"></i></a>
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Danh mục</a></li>
-                                            <li><a href="#">Chi tiết</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="has-children">
-                                        <a href="#">Kiến thức <i class="fas fa-angle-down"></i></a>
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Danh mục</a></li>
-                                            <li><a href="#">Chi tiết</a></li>
-                                        </ul>
+                                        <a href="#">Kiến thức <i class="fas fa-caret-down"></i></a>
+                                        <div class="mega-menu clearfix half-menu">
+                                            <div class="container-fluid">
+                                                <div class="row">
+                                                    <ul class="col-lg-6 col-md-12 col-xs-12 link-list">
+                                                        <li class="title">Công nghệ</li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Làm răng sứ</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Bọc răng sứ</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Phủ răng sứ</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dán răng sứ</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng</a></li>
+                                                    </ul>
+                                                    <ul class="col-lg-6 col-md-12 col-xs-12 link-list">
+                                                        <li class="title">Bệnh lý</li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng hô</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng móm</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng thưa</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng răng vàng ố</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng khấp khểnh</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Mất răng</a></li>
+                                                        <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Viêm nướu (lợi)</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </li>
                                     <li><a href="#">Tin tức</a></li>
                                     <li><a href="#">Liên hệ</a></li>
@@ -270,8 +319,8 @@
                                         <li class="has-children">
                                             <a href="#">Khách hàng</a>
                                             <ul class="sub-menu">
-                                                <li><a href="#">Danh mục</a></li>
-                                                <li><a href="#">Chi tiết</a></li>
+                                                <li><a href="#">Người nổi tiếng</a></li>
+                                                <li><a href="#">Khách hàng</a></li>
                                             </ul>
                                         </li>
                                         <li class="has-children">
@@ -674,7 +723,7 @@
             <section class="section home-news">
                 <div class="container">
                     <div class="h4 home-news-title">
-                        Tin tức
+                        Kiến thức
                     </div>
                     <div class="row">
                         <div class="owl-news owl-carousel owl-theme">
@@ -771,7 +820,6 @@
                                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/g6AHFrA1XBc?rel=0&showinfo=0" allowfullscreen></iframe>
                                     </div>
                                 </div>
-                                <p>Cám ơn bạn đã sử dụng dịch vụ của chúng tôi</p>
                             </div>
                         </div>
                         <div class="col-xl-7 col-lg-6 col-right">
@@ -780,11 +828,26 @@
                                     <div class="info d-flex flex-column justify-content-around">
                                         <img class="lozad" data-src="assets/img/logo-footer.png" alt="My Auris">
                                         <ul>
-                                            <li><i class="fas fa-phone-alt"></i><strong>Hotline: </strong>(+84) 901 95 88 58</li>
-                                            <li><i class="fas fa-map-marker-alt"></i><strong>Địa chỉ:</strong>11Bis, Nguyễn Gia Thiều, Phường 6, Quận 3, TP. Hồ Chí Minh</li>
-                                            <li><i class="fas fa-map-marker-alt"></i><strong>Địa chỉ:</strong>72 Nguyễn Cư Trinh, P. Phạm Ngũ Lão, Quận 1, TP. Hồ Chí Minh</li>
-                                            <li><i class="fas fa-map-marker-alt"></i><strong>Địa chỉ:</strong>24 Vũ Phạm Hàm, Trung Hòa, Quận Cầu Giấy, Hà Nội</li>
-                                            <li><i class="far fa-clock"></i><strong>Mon - Sat:</strong>08:00 AM - 07:00 PM</li>
+                                            <li class="d-flex align-items-center">
+                                                <div class="icon"><i class="fas fa-phone-alt"></i></div>
+                                                <div class="text"><strong>Hotline: </strong>(+84) 901 95 88 58</div>
+                                            </li>
+                                            <li class="d-flex align-items-center">
+                                                <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
+                                                <div class="text"><strong>Cơ sở 1:</strong>11Bis, Nguyễn Gia Thiều, Phường 6, Quận 3, TP. Hồ Chí Minh</div>
+                                            </li>
+                                            <li class="d-flex align-items-center">
+                                                <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
+                                                <div class="text"><strong>Cơ sở 2:</strong>72 Nguyễn Cư Trinh, P. Phạm Ngũ Lão, Quận 1, TP. Hồ Chí Minh</div>
+                                            </li>
+                                            <li class="d-flex align-items-center">
+                                                <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
+                                                <div class="text"><strong>Cơ sở 3:</strong>24 Vũ Phạm Hàm, Trung Hòa, Quận Cầu Giấy, Hà Nội</div>
+                                            </li>
+                                            <li class="d-flex align-items-center">
+                                                <div class="icon"><i class="far fa-clock"></i></div>
+                                                <div class="text"><strong>Mon - Sat:</strong>08:00 AM - 07:00 PM</div>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -817,33 +880,33 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="h5 title">Dịch vụ</div>
-                                        <ul>
-                                            <li><a href="#">Thẩm mỹ</a></li>
-                                            <li><a href="#">Điều trị</a></li>
-                                            <li><a href="#">Cải thiện</a></li>
-                                            <li><a href="#">Phục hồi</a></li>
+                                        <ul class="list-unstyled">
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Thẩm mỹ</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Điều trị</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Cải thiện</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Phục hồi</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="h5 title">Công nghệ &am</div>
-                                        <ul>
-                                            <li><a href="#">Làm răng sứ</a></li>
-                                            <li><a href="#">Bọc răng sứ</a></li>
-                                            <li><a href="#">Phủ răng sứ</a></li>
-                                            <li><a href="#">Dán răng sứ</a></li>
-                                            <li><a href="#">Niềng răng</a></li>
+                                        <div class="h5 title">Công nghệ</div>
+                                        <ul class="list-unstyled">
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Làm răng sứ</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Bọc răng sứ</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Phủ răng sứ</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Dán răng sứ</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Niềng răng</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="h5 title">Bệnh lý</div>
-                                        <ul>
-                                            <li><a href="#">Răng hô</a></li>
-                                            <li><a href="#">Răng móm</a></li>
-                                            <li><a href="#">Răng thưa</a></li>
-                                            <li><a href="#">Răng vàng ố</a></li>
-                                            <li><a href="#">Răng khấp khểnh</a></li>
-                                            <li><a href="#">Mất răng</a></li>
-                                            <li><a href="#">Viêm nướu (lợi)</a></li>
+                                        <ul class="list-unstyled">
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Răng hô</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Răng móm</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Răng thưa</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Răng vàng ố</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Răng khấp khểnh</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Mất răng</a></li>
+                                            <li><i class="fas fa-caret-right"></i>&nbsp;<a href="#">Viêm nướu (lợi)</a></li>
                                         </ul>
                                     </div>
                                 </div>
