--- a/index.html
+++ b/index.html
@@ -231,21 +231,30 @@
                                             <div class="container">
                                                 <div class="row">
                                                     <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
-                                                        <li class="title">Thẩm mỹ</li>
+                                                        <li class="title">
+                                                            <img class="lozad is-loaded" data-src="assets/img/2.png" alt="My Auris" src="assets/img/2.png" data-loaded="true">
+                                                            Thẩm mỹ
+                                                        </li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dòng sứ phổ thông</a></li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dòng sứ cao cấp</a></li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Phủ răng sứ</a></li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dán sứ - Phủ màn sứ</a></li>
                                                     </ul>
                                                     <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
-                                                        <li class="title">Điều trị</li>
+                                                        <li class="title">
+                                                            <img class="lozad is-loaded" data-src="assets/img/2.png" alt="My Auris" src="assets/img/4.png" data-loaded="true">
+                                                            Điều trị
+                                                        </li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Cạo vôi răng</a></li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Trám răng</a></li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Điều trị tủy</a></li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Nhổ răng</a></li>
                                                     </ul>
                                                     <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
-                                                        <li class="title">Cải thiện</li>
+                                                        <li class="title">
+                                                            <img class="lozad is-loaded" data-src="assets/img/2.png" alt="My Auris" src="assets/img/1.png" data-loaded="true">
+                                                            Cải thiện
+                                                        </li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng mắc cài</a></li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng vô hình Invisalign</a></li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng vô hình iMay</a></li>
@@ -253,7 +262,10 @@
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Nhấn lợi tạo đường cười</a></li>
                                                     </ul>
                                                     <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
-                                                        <li class="title">Phục hồi</li>
+                                                        <li class="title">
+                                                            <img class="lozad is-loaded" data-src="assets/img/2.png" alt="My Auris" src="assets/img/3.png" data-loaded="true">
+                                                            Phục hồi
+                                                        </li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Cầu răng sứ</a></li>
                                                         <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Trồng răng Implant</a></li>
                                                     </ul>
@@ -737,6 +749,10 @@
                                             <a href="#">
                                                 <h4 class="title">Nha khoa niềng răng uy tín ở Hà Nội</h4>
                                             </a>
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item"><i class="far fa-clock"></i>22-07-2019 11:57</li>
+                                                <li class="list-inline-item"><i class="fas fa-eye"></i>750</li>
+                                            </ul>
                                             <div class="desc">
                                                 Hàm răng trắng sáng, đều đặn sẽ mang đến một nụ cười đẹp và tự tin, góp phần nâng cao chất lượng cuộc sống.
                                                 Để có hàm răng đều đẹp là điều mà ai cũng mong muốn.
@@ -756,6 +772,10 @@
                                             <a href="#">
                                                 <h4 class="title">Phẫu thuật hàm hô có cần niềng răng không?</h4>
                                             </a>
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item"><i class="far fa-clock"></i>22-07-2019 11:57</li>
+                                                <li class="list-inline-item"><i class="fas fa-eye"></i>750</li>
+                                            </ul>
                                             <div class="desc">
                                                 Một phương pháp điều trị của chỉnh hàm hô là phẫu thuật hàm để chỉnh hô.
                                                 Vậy hàm hô là gì? phẫu thuật hô hàm có cần niềng răng không? Có đau không?
@@ -775,6 +795,10 @@
                                             <a href="#">
                                                 <h4 class="title">Phẫu thuật hàm hô có nguy hiểm và để lại hậu quả gì không?</h4>
                                             </a>
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item"><i class="far fa-clock"></i>22-07-2019 11:57</li>
+                                                <li class="list-inline-item"><i class="fas fa-eye"></i>750</li>
+                                            </ul>
                                             <div class="desc">
                                                 Phẫu thuật hàm là phương pháp cải thiện tình trạng hô, móm do xương hàm gây ra.
                                                 Phẫu thuật hàm hô móm có đau không? Có nguy hiểm hay để lại biến chứng gì không? Cần lưu ý những gì trong quá trình phẫu thuật? Cùng tìm hiểu nhé!
@@ -793,6 +817,10 @@
                                             <a href="#">
                                                 <h4 class="title">Nhổ răng để niềng có ảnh hưởng gì đến sức khỏe không?</h4>
                                             </a>
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item"><i class="far fa-clock"></i>22-07-2019 11:57</li>
+                                                <li class="list-inline-item"><i class="fas fa-eye"></i>750</li>
+                                            </ul>
                                             <div class="desc">
                                                 Niềng răng là lựa chọn hàng đầu của khách hàng khi có ý định điều chỉnh các răng bị thưa, móm, khấp khểnh và đặc biệt là răng hô vẩu.
                                                 Tuy nhiên, nhiều trường hợp  phải nhổ răng để tạo khoảng trống trên cung hàm cho răng di chuyển trong quá trình niềng.
