--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <!--Responsive Style-->
     <link rel="preload" href="assets/css/responsive.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="assets/css/responsive.css"></noscript>
+    <script>!function(n){"use strict";n.loadCSS||(n.loadCSS=function(){});var o=loadCSS.relpreload={};if(o.support=function(){var e;try{e=n.document.createElement("link").relList.supports("preload")}catch(t){e=!1}return function(){return e}}(),o.bindMediaToggle=function(t){var e=t.media||"all";function a(){t.addEventListener?t.removeEventListener("load",a):t.attachEvent&&t.detachEvent("onload",a),t.setAttribute("onload",null),t.media=e}t.addEventListener?t.addEventListener("load",a):t.attachEvent&&t.attachEvent("onload",a),setTimeout(function(){t.rel="stylesheet",t.media="only x"}),setTimeout(a,3e3)},o.poly=function(){if(!o.support())for(var t=n.document.getElementsByTagName("link"),e=0;e<t.length;e++){var a=t[e];"preload"!==a.rel||"style"!==a.getAttribute("as")||a.getAttribute("data-loadcss")||(a.setAttribute("data-loadcss",!0),o.bindMediaToggle(a))}},!o.support()){o.poly();var t=n.setInterval(o.poly,500);n.addEventListener?n.addEventListener("load",function(){o.poly(),n.clearInterval(t)}):n.attachEvent&&n.attachEvent("onload",function(){o.poly(),n.clearInterval(t)})}"undefined"!=typeof exports?exports.loadCSS=loadCSS:n.loadCSS=loadCSS}("undefined"!=typeof global?global:this);</script>
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
@@ -224,7 +225,7 @@
                             <div class="nav d-none d-lg-block">
                                 <ul>
                                     <li class="active"><a href="/">Trang chủ</a></li>
-                                    <li><a href="#">Giới thiệu</a></li>
+                                    <li><a href="./about.html">Giới thiệu</a></li>
                                     <li class="has-children">
                                         <a href="#">Dịch vụ <i class="fas fa-caret-down"></i></a>
                                         <div class="mega-menu clearfix">
@@ -320,7 +321,7 @@
                                 <nav id="nav-mobile">
                                     <ul>
                                         <li class="active"><a href="/">Trang chủ</a></li>
-                                        <li><a href="#">Giới thiệu</a></li>
+                                        <li><a href="./about.html">Giới thiệu</a></li>
                                         <li class="has-children">
                                             <a href="#">Dịch vụ</a>
                                             <ul class="sub-menu">
@@ -949,13 +950,13 @@
         </footer>
     </div>
 
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/third_party/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/third_party/owl-carousel/owl.carousel.min.js"></script>
-    <script src="assets/third_party/progress/progress.js"></script>
-    <script src="assets/third_party/mmenu-js/dist/mmenu.js"></script>
-    <script src="assets/third_party/mmenu-js/src/mmenu.debugger.js"></script>
-    <script src="assets/js/lozad.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="./assets/js/jquery-3.2.1.min.js"></script>
+    <script src="./assets/third_party/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./assets/third_party/owl-carousel/owl.carousel.min.js"></script>
+    <script src="./assets/third_party/progress/progress.js"></script>
+    <script src="./assets/third_party/mmenu-js/dist/mmenu.js"></script>
+    <script src="./assets/third_party/mmenu-js/src/mmenu.debugger.js"></script>
+    <script src="./assets/js/lozad.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
