fix layout about wts map

--- a/about.html
+++ b/about.html
@@ -519,7 +519,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row d-none d-lg-block">
+                        <div class="row d-none d-lg-flex">
                             <div class="col-lg-3">
                                 <div class="wts-nav-collapse" id="step1">
                                     <ul class="list-unstyled">
