--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         <div class="col-lg-5 about-right">
                             <div class="h4 about-title">Welcome to<br><strong>My Auris</strong></div>
                             <div class="about-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                My Auris - Smart Dental Group, tên đầy đủ là Viện công nghệ nha khoa My Auris. Trải qua quá trình nghiên cứu, tìm hiểu lâu dài, đội ngũ bác sĩ, chuyên gia đã cho ra đời công nghệ nha khoa hiện đại, đột phá bậc nhất mang tên WTS - Way to Smile. My Auris tự hào là đơn vị tiên phong đưa ứng dụng trí tuệ nhân tạo vào lĩnh vực nha khoa thẩm mỹ. Trong đó, WTS được coi là tấm bản đồ dành cho tất cả mọi người trên hành trình chăm sóc, tìm kiếm và bảo tồn vẻ đẹp nụ cười, gồm: 4 điểm, 7 bước, 8 tiêu chí, 3 khâu kiểm soát. WTS - sự kết hợp hoàn chỉnh của Khoa học thẩm mỹ - Bác sĩ - Công nghệ, giúp khách hàng chủ động quyết định giải pháp BẢO HIỂM cho hàm răng của mình. Chúng tôi luôn mong muốn mang tới cho các bạn lựa chọn sáng suốt nhất!
                             </div>
                             <div class="view-more">
                                 <a href="#">Xem thêm</a>
@@ -904,7 +904,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-8 footer-menu">
+                        <div class="col-lg-5 footer-menu">
                             <div class="footer-nav">
                                 <div class="row">
                                     <div class="col-md-4">
@@ -939,6 +939,13 @@
                                         </ul>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="facebook-page">
+                                <div id="fb-root"></div>
+                                <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v4.0&appId=345733006335433&autoLogAppEvents=1"></script>
+                                <div class="fb-page" data-href="https://www.facebook.com/myauris/" data-tabs="" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/myauris/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/myauris/">Nha Khoa MY AURIS - Smart Dental Group</a></blockquote></div>
                             </div>
                         </div>
                     </div>
