--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
             <div class="footer-middle">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4 footer-info">
+                        <div class="col-lg-4 col-md-6 footer-info">
                             <div class="info">
                                 Nha Khoa My Auris với tiêu chí mang đến SỰ THẬT cho khách hàng - tự hào là địa chỉ làm răng uy tín hàng đầu tại Việt Nam với giải pháp độc quyền WTS được hàng triệu khách hàng và nghệ sĩ tin tưởng trao gửi nụ cười.
                             </div>
