create layout service

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                     <li class="active"><a href="/">Trang chủ</a></li>
                                     <li><a href="./about.html">Giới thiệu</a></li>
                                     <li class="has-children">
-                                        <a href="#">Dịch vụ <i class="fas fa-caret-down"></i></a>
+                                        <a href="./services.html">Dịch vụ <i class="fas fa-caret-down"></i></a>
                                         <div class="mega-menu clearfix">
                                             <div class="container">
                                                 <div class="row">
